tinyc/test/good/assert-is-expr.c
int main()
{
    assert( 1 ), assert( 2 );
    return 0;
}
