tinyc/test/bad/null-arithmetic.c
int main()
{
    2 + NULL;
    return 0;
}
